source/app/static/assets/css/dark-theme.css
/* ... */
.sidebar .scrollbar-inner>.scroll-element .scroll-bar {
    background-color: #f7f7f7;
}

.sidebar .scrollbar-inner>.scroll-element.scroll-draggable .scroll-bar,
.sidebar .scrollbar-inner>.scroll-element:hover .scroll-bar {
    background-color: #dcdbdb;
}

.sidebar {
    background: #1f283e !important;
}

.sidebar .user {
    border-color: rgba(181, 181, 181, 0.1) !important;
}

.sidebar .user .info a>span {
    color: #dddedf;
}

.sidebar .user .info a>span .user-level {
    color: #8d9498;
}

.sidebar .nav>.nav-item.active>a p {
    color: #ffffff !important;
}

.sidebar .nav>.nav-item a {
    color: #ffffff !important;
}

body,
body label,
.sidebar .nav>.nav-item a:hover p,
.sidebar .nav>.nav-item a:focus p,
.sidebar .nav > .nav-item a p,
.sidebar .nav>.nav-item a[data-toggle=collapse][aria-expanded=true] p {
    color: #d3d2d2 !important;
}

.sidebar.sidebar-style-2 .nav .nav-item.active>a,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:hover,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:focus,
.sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] {
    background: rgba(185, 185, 185, 0.18) !important;
    color: #1f283e !important;
}

.sidebar.sidebar-style-2 .nav .nav-item.active>a p,
.sidebar.sidebar-style-2 .nav .nav-item.active>a i,
.sidebar.sidebar-style-2 .nav .nav-item.active>a .caret,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:hover p,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:hover i,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:hover .caret,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:focus p,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:focus i,
.sidebar.sidebar-style-2 .nav .nav-item.active>a:focus .caret,
.sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] p,
.sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] i,
.sidebar.sidebar-style-2 .nav .nav-item.active>a[data-toggle=collapse][aria-expanded=true] .caret {
    color: #1f283e !important;
}

.sidebar .scrollbar-inner>.scroll-element .scroll-bar {
    background-color: #f7f7f7;
}

.sidebar .scrollbar-inner>.scroll-element.scroll-draggable .scroll-bar,
.sidebar .scrollbar-inner>.scroll-element:hover .scroll-bar {
    background-color: #dcdbdb;
}


.form-control:disabled, .form-control[readonly] {
  background: #d5d1d100 !important;
  border-color: #515151 !important;
}

body .input-group-text {
  border-color: #2f374b !important;
  background-color: #404551;
  color: #fff;
}
.card-profile {
  color: #e8e8e8;
}
.sidebar .user .info a > span .user-level {
  color: #fff;
}

.sidebar .nav .nav-section .text-section, .sidebar .nav .nav-section .text-section {
  color: #fff;
}

.modal-backdrop.show {
  opacity: 0.9;
}

.alert-std {
  background-color: #444;
}

.accordion .card {
  background: #444;
  color: #fff;
}

.accordion.accordion-primary .card .card-header {
  color: #fff;
}

pre {
  color: #dbdbdb;
}

.secondary-header .nav-bottom .page-navigation.page-navigation-style-2 > .nav-item:hover > .nav-link, .secondary-header .nav-bottom .page-navigation.page-navigation-style-2 > .nav-item:focus > .nav-link {
  background: rgba(185, 185, 185, 0.18);
}

.text-muted {
  color: #9f9f9f !important;
}

